--- a/src/content/blog/building-this-site.mdx
+++ b/src/content/blog/building-this-site.mdx
@@ -154,4 +154,4 @@ If you've read this far, go try the glitch effect. Move your mouse around. It's 
 
 ---
 
-*The source for this site is at [github.com/S33G/ascii-blog](https://github.com/S33G/ascii-blog)*
+*The source for this site is at [github.com/S33G/www](https://github.com/S33G/www)*
