Update GrooveLab blog posts with links and rebrand note
- Update bpm-tool.mdx: Add rebrand notice, cross out old links, point to GrooveLab
- Update groovelab.mdx: Add 'Try it out' section with live tool and GitHub links

--- a/src/content/blog/bpm-tool.mdx
+++ b/src/content/blog/bpm-tool.mdx
@@ -7,8 +7,10 @@ tags: ['music', 'tools', 'web', 'react', 'nextjs', 'typescript']
 
 I built BPM Tool because I was tired of pausing a session to do tempo math. I wanted a fast, single-screen utility that answers "what is a dotted eighth at 128 BPM?" and then goes a little further: swing, groove, MIDI, and a quick way to hear the feel.
 
-- Live tool: [bpm.s33g.uk](https://bpm.s33g.uk)
-- Source code: [github.com/S33G/bpm-tool](https://github.com/S33G/bpm-tool)
+> **Update:** BPM Tool has been rebranded and expanded into [GrooveLab](/blog/groovelab), a broader timing + groove toolbox. The live tool and source have moved.
+
+- Live tool: ~~bpm.s33g.uk~~ → [groovelab.s33g.uk](https://groovelab.s33g.uk)
+- Source code: ~~github.com/S33G/bpm-tool~~ → [github.com/S33G/groovelab](https://github.com/S33G/groovelab)
 
 ## What it does
 
