Update blog tags and add project-specific tags for better discoverability
- Updated featured.json with project-specific tags:
  - www → ascii-blog (2 posts)
  - proj → proj (1 post)
  - github-fork-manager → gfm (1 post)
  - groovelab → groovelab (1 post)
- Add project tags to blog posts where relevant
- Enables projects to link to all related blog content by tag
- Badge on projects page now shows accurate post counts

--- a/src/content/blog/better-ascii-animations-with-webgl.mdx
+++ b/src/content/blog/better-ascii-animations-with-webgl.mdx
@@ -2,7 +2,7 @@
 title: 'Better ASCII animations with WebGL'
 description: 'Canvas 2D got me a working ASCII background, but WebGL2 is what made it smooth at real viewport sizes.'
 pubDate: 2026-01-21
-tags: ['astro', 'performance', 'ascii', 'web']
+tags: ['astro', 'performance', 'ascii', 'web', 'ascii-blog']
 ---
 
 I started this site’s ASCII background renderer in Canvas 2D because it’s the fastest way to get pixels on screen.
