--- a/src/content/blog/bpm-tool.mdx
+++ b/src/content/blog/bpm-tool.mdx
@@ -2,7 +2,7 @@
 title: 'BPM Tool: tempo math for music producers'
 description: 'A web calculator for BPM to ms/Hz, plus swing, groove, MIDI export, and a tiny synth to audition feel.'
 pubDate: 2026-01-22
-tags: ['music', 'tools', 'web', 'react', 'nextjs', 'typescript']
+tags: ['music', 'tools', 'web', 'react', 'nextjs', 'typescript', 'groovelab']
 ---
 
 I built BPM Tool because I was tired of pausing a session to do tempo math. I wanted a fast, single-screen utility that answers "what is a dotted eighth at 128 BPM?" and then goes a little further: swing, groove, MIDI, and a quick way to hear the feel.
