--- a/src/content/blog/building-this-site.mdx
+++ b/src/content/blog/building-this-site.mdx
@@ -2,7 +2,7 @@
 title: 'Building a dev blog with ASCII art and AI'
 description: 'How I built this site using Astro, TypeScript, and some help from AI assistants. A story of ASCII art, explosions, and chasing aesthetic.'
 pubDate: 2026-01-20
-tags: ['astro', 'typescript', 'ai', 'web']
+tags: ['astro', 'typescript', 'ai', 'web', 'ascii-blog']
 ---
 
 You're looking at it. I wanted to have fun with Canvas 2D rendering, experiment with Astro and TypeScript, and build a personal blog that felt "unique" - if that's still a thing..
