--- a/src/content/blog/github-fork-manager.mdx
+++ b/src/content/blog/github-fork-manager.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Fork Manager: cleaning up forks without the pain'
 description: 'A fast, terminal-first tool to delete forks (or repos) safely at scale, with guardrails and logs.'
 pubDate: 2026-01-20 10:12:14
-tags: ['tools', 'go', 'tui', 'github', 'dx']
+tags: ['tools', 'go', 'tui', 'github', 'dx', 'gfm']
 ---
 
 I built `github-fork-manager` because the GitHub UI makes it intentionally hard to delete lots of repositories. That’s the right trade-off for most people. But if you’re the type who prototypes, forks, and experiments a lot, the clutter adds up fast.
