--- a/src/content/blog/groovelab.mdx
+++ b/src/content/blog/groovelab.mdx
@@ -2,7 +2,7 @@
 title: 'Introducing: GrooveLab'
 description: 'How I rebranded a personal music utility while experimenting with generative AI in my programming workflow.'
 pubDate: 2026-01-24
-tags: ['tools', 'music', 'llm', 'workflow']
+tags: ['tools', 'music', 'llm', 'workflow', 'groovelab']
 ---
 
 I started this repo as “bpm tool” because I needed tempo math fast, while producing music. It didn’t stay a calculator for long.
