--- a/src/content/blog/introducing-proj.mdx
+++ b/src/content/blog/introducing-proj.mdx
@@ -2,7 +2,7 @@
 title: 'Introducing `proj` a portable project navigator'
 description: 'A fast TUI that scans your code folders, gives quick context, and lets you trigger common project actions from the terminal.'
 pubDate: 2026-01-19 03:45:00
-tags: ['tools', 'go', 'tui', 'dx']
+tags: ['tools', 'go', 'tui', 'dx', 'proj']
 ---
 
 For years I've kept a small, personal tool around that does one job really well: give me a quick overview of whatever code is living on my machine right now—then let me *do something useful* with it immediately.
