bad-commit-message

--- a/src/content/blog/thriving-in-techs-ai-era.mdx
+++ b/src/content/blog/thriving-in-techs-ai-era.mdx
@@ -5,7 +5,9 @@ pubDate: 2026-02-06
 tags: ['ai', 'career', 'tech', 'personal']
 ---
 
-There's a strange moment I keep returning to: I'm using AI to write about AI's impact on tech jobs. The irony isn't lost on me.
+There's a strange moment I keep returning to: I'm using AI to write about AI's impact on tech jobs -- The irony is not lost on me.
+
+---
 
 I'm doing everything the advice says to do. I'm embracing LLMs. I've shifted how I work—treating AI like a collaborative partner, not a threat. I integrate it into daily workflows. I experiment. I adapt. And somehow, I still feel uncertain about what comes next.
 
