docs: amend units article
Thanks to RippleFCL for the review

Co-authored-by: ripple <github@ripple.contact>

--- a/src/content/blog/units-app.mdx
+++ b/src/content/blog/units-app.mdx
@@ -18,21 +18,24 @@ I built [Units](https://units.s33g.uk) to see how far I could push the "AI-nativ
 - **Styling:** Tailwind CSS
 - **Testing:** Vitest
 
-It's a standard, robust stack. Nothing exotic, which makes it perfect for testing the *process* rather than the tech.
+It's a standard, robust stack. Nothing exotic, which makes it perfect for testing the _process_ rather than the tech.
 
 ## The Workflow
 
 The interesting part isn't the code itself, but how it was written. I used a three-stage pipeline:
 
 ### 1. Discovery (Perplexity + Gemini 3)
+
 I used Perplexity to generate the initial list of categories and units.
 
 For the math, I relied on Gemini 3. It provided the explicit conversion formulas and sources for the constants, which allowed me to seed the database with verified data. This saved significant time on research and manual data entry.
 
 ### 2. Planning (Opencode / Sisyphus)
-Once I knew *what* to build, I needed a plan. I used Opencode (specifically the Sisyphus agent) to break the project down into actionable tasks. We defined the architecture, the component structure, and the data models.
+
+Once I knew _what_ to build, I needed a plan. I used Opencode (specifically the Sisyphus agent) to break the project down into actionable tasks. We defined the architecture, the component structure, and the data models.
 
 ### 3. Implementation (Gemini 3 Pro + Sisyphus)
+
 I used Gemini 3 Pro to write the code. It handled the React component structure and the separation of concerns for the conversion logic effectively.
 
 ```mermaid
@@ -47,7 +50,7 @@ flowchart TD
 
 ## Code Spotlight: The Core Logic
 
-The conversion logic needs to be rock solid. We decided to normalize everything to a "base unit" first, then convert to the target unit. This avoids the O(n²) complexity of defining conversion factors for every possible pair.
+The conversion logic needs to be rock solid. We decided to normalize everything to a "base unit" first, then convert to the target unit. This avoids defining conversion factors for every possible pair—with n units, that would be n² definitions instead of just n.
 
 Here is the clean implementation `lib/convert.ts` that powers the app:
 
