--- a/src/content/blog/introducing-proj.mdx
+++ b/src/content/blog/introducing-proj.mdx
@@ -5,7 +5,7 @@ pubDate: 2026-01-19 03:45:00
 tags: ['tools', 'go', 'tui', 'dx', 'proj']
 ---
 
-For years I've kept a small, personal tool around that does one job really well: give me a quick overview of whatever code is living on my machine right now—then let me *do something useful* with it immediately.
+For years — I've kept a small, personal tool around that does one job really well: give me a quick overview of whatever code is living on my machine right now — then let me *do something useful* with it immediately.
 
 I finally rewrote it properly in Go and published it as `proj`:
 
@@ -97,12 +97,12 @@ I’m using `proj` daily and iterating as I find friction points. If this sounds
 
 ## Contributing
 
-Contributions are welcome—issues, feature requests, docs tweaks, and PRs all help. If you’ve got a workflow you’d love `proj` to support, open an issue with a short description of your use case and what “good” looks like.
+Contributions are welcome — issues, feature requests, docs tweaks, and PRs all help. If you’ve got a workflow you’d love `proj` to support, open an issue with a short description of your use case and what “good” looks like.
 
-## Coming soon
+## Feature Ideas
 
 - **AI tool integrations** (OpenCode, ClaudeCode, CodexCLI, and friends)
-- **Text-based workflow** (for alternate UIs / use cases—Emacs, remote shells, etc.)
+- **Text-based workflow** (for alternate UIs / use cases — Emacs, remote shells, etc.)
 - **GitHub integration** (clone repos you have access to, public or private)
 - **More** as the ideas land
 
