--- a/src/content/blog/navigation-api.mdx
+++ b/src/content/blog/navigation-api.mdx
@@ -181,7 +181,7 @@ if (window.navigation) {
 }
 ```
 
-The [aleph.js](https://github.com/alephjs/aleph.js) framework already ships this pattern in production.
+The ~~[aleph.js](https://github.com/alephjs/aleph.js)~~ [Fresh](https://fresh.deno.dev/) framework already ships this pattern in production.
 
 ## Gotchas
 
